--- a/blogpost.html
+++ b/blogpost.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="cabecera">
             Cabecera
-            <span id="tagline">Tu blog de confianza</span>
+            <span id="tagline">Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del POST</h1>
@@ -19,6 +19,7 @@
             <p>Los blogs son la mejor forma de compartir nformación y tus ideas. Mucho más que ir a conferenciaas o salir
                 en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres... por ahora.
             </p>
+            <p>Suscribete y dale like</p>
         </div>
     </div>
 </body>
